--- a/Javascript/Node_js/learn_with_TCT/Module_3/The_weather_here/package.json
+++ b/Javascript/Node_js/learn_with_TCT/Module_3/The_weather_here/package.json
@@ -16,6 +16,7 @@
   "author": "mesto",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "nedb": "^1.8.0",
     "node-fetch": "^3.1.1"
